--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 node_modules/
-.env/
+.env
+
+
+
+
+
+# echo "# Leaderboard-Project1" >> README.md
+# git init
+# git add README.md
+# git commit -m "first commit"
+# git branch -M main
+# git remote add origin https://github.com/Rankers07/Leaderboard-Project1.git
+# git push -u origin main
